parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    AND
    newline
    OR
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> PACKAGE COLON V MAINP P B END
Rule 2     MAINP -> empty
Rule 3     V -> V VAR VM AS TIPO
Rule 4     V -> empty
Rule 5     VM -> ID VM2
Rule 6     VM2 -> COMMA ID VM2
Rule 7     VM -> ID SQBL NUMBER SQBR VM2
Rule 8     VM2 -> COMMA ID SQBL NUMBER SQBR VM2
Rule 9     VM -> ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
Rule 10    VM2 -> COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
Rule 11    VM -> ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
Rule 12    VM2 -> COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
Rule 13    VM2 -> empty
Rule 14    TIPO -> FLOAT
Rule 15    TIPO -> INT
Rule 16    TIPO -> ARRAY_INT
Rule 17    TIPO -> ARRAY_FLOAT
Rule 18    TIPO -> MATRIX_INT
Rule 19    TIPO -> MATRIX_FLOAT
Rule 20    TIPO -> CUBE_INT
Rule 21    TIPO -> CUBE_FLOAT
Rule 22    TIPO -> BOOL
Rule 23    P -> P AUXPOSP MODULE ID COLON ST ENDM
Rule 24    P -> empty
Rule 25    AUXPOSP -> empty
Rule 26    B -> MAIN PARL PARR ST
Rule 27    ST -> S ST
Rule 28    ST -> empty
Rule 29    S -> ROUT PARL SID PARR
Rule 30    S -> RIN PARL IID PARR
Rule 31    S -> IF CONDITION COLON ST ENDIF
Rule 32    S -> IF CONDITION COLON ST ELSE COLON ST ENDIF
Rule 33    S -> FOR ID IN ID COLON ST ENDFOR
Rule 34    S -> VMC ASSIGN UPDATE
Rule 35    S -> WHILE CONDITION COLON ST ENDW
Rule 36    S -> DO COLON ST DWHILE COLON CONDITION ENDDO
Rule 37    S -> RGOSUB ID
Rule 38    SID -> STRING SID2
Rule 39    SID -> VMC SID2
Rule 40    SID2 -> PLUS VMC SID2
Rule 41    SID2 -> PLUS STRING SID2
Rule 42    SID2 -> empty
Rule 43    IID -> VMC IID2
Rule 44    IID2 -> COMMA VMC IID2
Rule 45    IID2 -> empty
Rule 46    CONDITION -> CMP COMPARATOR CMP
Rule 47    CMP -> NUMBER
Rule 48    CMP -> ID
Rule 49    COMPARATOR -> NE
Rule 50    COMPARATOR -> GT
Rule 51    COMPARATOR -> LT
Rule 52    COMPARATOR -> EQ
Rule 53    VMC -> ID
Rule 54    VMC -> ID SQBL CMP SQBR SQBL CMP SQBR
Rule 55    VMC -> ID SQBL CMP SQBR SQBL CMP SQBR SQBL CMP SQBR
Rule 56    UPDATE -> VMC UPDATE
Rule 57    UPDATE -> NUMBER OPERATOR UPDATE
Rule 58    UPDATE -> VMC
Rule 59    UPDATE -> NUMBER
Rule 60    OPERATOR -> PLUS
Rule 61    OPERATOR -> MINUS
Rule 62    OPERATOR -> TIMES
Rule 63    OPERATOR -> DIVIDE
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARRAY_FLOAT          : 17
ARRAY_INT            : 16
AS                   : 3
ASSIGN               : 34
BOOL                 : 22
COLON                : 1 23 31 32 32 33 35 36 36
COMMA                : 6 8 10 12 44
COMMENT              : 
CUBE_FLOAT           : 21
CUBE_INT             : 20
DIVIDE               : 63
DO                   : 36
DOT                  : 
DWHILE               : 36
ELSE                 : 32
END                  : 1
ENDDO                : 36
ENDFOR               : 33
ENDIF                : 31 32
ENDM                 : 23
ENDW                 : 35
EQ                   : 52
FLOAT                : 14
FOR                  : 33
GT                   : 50
ID                   : 5 6 7 8 9 10 11 12 23 33 33 37 48 53 54 55
IF                   : 31 32
IN                   : 33
INT                  : 15
LT                   : 51
MAIN                 : 26
MATRIX_FLOAT         : 19
MATRIX_INT           : 18
MINUS                : 61
MODULE               : 23
NE                   : 49
NUMBER               : 7 8 9 9 10 10 11 11 11 12 12 12 47 57 59
OR                   : 
PACKAGE              : 1
PARL                 : 26 29 30
PARR                 : 26 29 30
PLUS                 : 40 41 60
RGOSUB               : 37
RIN                  : 30
ROUT                 : 29
SQBL                 : 7 8 9 9 10 10 11 11 11 12 12 12 54 54 55 55 55
SQBR                 : 7 8 9 9 10 10 11 11 11 11 12 12 12 12 54 54 55 55 55
STRING               : 38 41
TIMES                : 62
VAR                  : 3
WHILE                : 35
error                : 
newline              : 

Nonterminals, with rules where they appear

AUXPOSP              : 23
B                    : 1
CMP                  : 46 46 54 54 55 55 55
COMPARATOR           : 46
CONDITION            : 31 32 35 36
IID                  : 30
IID2                 : 43 44
MAINP                : 1
OPERATOR             : 57
P                    : 1 23
S                    : 27
SID                  : 29
SID2                 : 38 39 40 41
ST                   : 23 26 27 31 32 32 33 35 36
TIPO                 : 3
UPDATE               : 34 56 57
V                    : 1 3
VM                   : 3
VM2                  : 5 6 7 8 9 10 11 12
VMC                  : 34 39 40 43 44 56 58
empty                : 2 4 13 24 25 28 42 45
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PACKAGE COLON V MAINP P B END

    PACKAGE         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PACKAGE . COLON V MAINP P B END

    COLON           shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> PACKAGE COLON . V MAINP P B END
    (3) V -> . V VAR VM AS TIPO
    (4) V -> . empty
    (64) empty -> .

    VAR             reduce using rule 64 (empty -> .)
    MAIN            reduce using rule 64 (empty -> .)
    MODULE          reduce using rule 64 (empty -> .)

    V                              shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PACKAGE COLON V . MAINP P B END
    (3) V -> V . VAR VM AS TIPO
    (2) MAINP -> . empty
    (64) empty -> .

    VAR             shift and go to state 6
    MAIN            reduce using rule 64 (empty -> .)
    MODULE          reduce using rule 64 (empty -> .)

    MAINP                          shift and go to state 8
    empty                          shift and go to state 7

state 5

    (4) V -> empty .

    VAR             reduce using rule 4 (V -> empty .)
    MAIN            reduce using rule 4 (V -> empty .)
    MODULE          reduce using rule 4 (V -> empty .)


state 6

    (3) V -> V VAR . VM AS TIPO
    (5) VM -> . ID VM2
    (7) VM -> . ID SQBL NUMBER SQBR VM2
    (9) VM -> . ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (11) VM -> . ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    ID              shift and go to state 10

    VM                             shift and go to state 9

state 7

    (2) MAINP -> empty .

    MAIN            reduce using rule 2 (MAINP -> empty .)
    MODULE          reduce using rule 2 (MAINP -> empty .)


state 8

    (1) program -> PACKAGE COLON V MAINP . P B END
    (23) P -> . P AUXPOSP MODULE ID COLON ST ENDM
    (24) P -> . empty
    (64) empty -> .

    MAIN            reduce using rule 64 (empty -> .)
    MODULE          reduce using rule 64 (empty -> .)

    P                              shift and go to state 11
    empty                          shift and go to state 12

state 9

    (3) V -> V VAR VM . AS TIPO

    AS              shift and go to state 13


state 10

    (5) VM -> ID . VM2
    (7) VM -> ID . SQBL NUMBER SQBR VM2
    (9) VM -> ID . SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (11) VM -> ID . SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (6) VM2 -> . COMMA ID VM2
    (8) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (13) VM2 -> . empty
    (64) empty -> .

    SQBL            shift and go to state 16
    COMMA           shift and go to state 14
    AS              reduce using rule 64 (empty -> .)

    VM2                            shift and go to state 15
    empty                          shift and go to state 17

state 11

    (1) program -> PACKAGE COLON V MAINP P . B END
    (23) P -> P . AUXPOSP MODULE ID COLON ST ENDM
    (26) B -> . MAIN PARL PARR ST
    (25) AUXPOSP -> . empty
    (64) empty -> .

    MAIN            shift and go to state 20
    MODULE          reduce using rule 64 (empty -> .)

    empty                          shift and go to state 18
    B                              shift and go to state 21
    AUXPOSP                        shift and go to state 19

state 12

    (24) P -> empty .

    MAIN            reduce using rule 24 (P -> empty .)
    MODULE          reduce using rule 24 (P -> empty .)


state 13

    (3) V -> V VAR VM AS . TIPO
    (14) TIPO -> . FLOAT
    (15) TIPO -> . INT
    (16) TIPO -> . ARRAY_INT
    (17) TIPO -> . ARRAY_FLOAT
    (18) TIPO -> . MATRIX_INT
    (19) TIPO -> . MATRIX_FLOAT
    (20) TIPO -> . CUBE_INT
    (21) TIPO -> . CUBE_FLOAT
    (22) TIPO -> . BOOL

    FLOAT           shift and go to state 27
    INT             shift and go to state 29
    ARRAY_INT       shift and go to state 26
    ARRAY_FLOAT     shift and go to state 22
    MATRIX_INT      shift and go to state 31
    MATRIX_FLOAT    shift and go to state 30
    CUBE_INT        shift and go to state 23
    CUBE_FLOAT      shift and go to state 28
    BOOL            shift and go to state 24

    TIPO                           shift and go to state 25

state 14

    (6) VM2 -> COMMA . ID VM2
    (8) VM2 -> COMMA . ID SQBL NUMBER SQBR VM2
    (10) VM2 -> COMMA . ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> COMMA . ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    ID              shift and go to state 32


state 15

    (5) VM -> ID VM2 .

    AS              reduce using rule 5 (VM -> ID VM2 .)


state 16

    (7) VM -> ID SQBL . NUMBER SQBR VM2
    (9) VM -> ID SQBL . NUMBER SQBR SQBL NUMBER SQBR VM2
    (11) VM -> ID SQBL . NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    NUMBER          shift and go to state 33


state 17

    (13) VM2 -> empty .

    AS              reduce using rule 13 (VM2 -> empty .)


state 18

    (25) AUXPOSP -> empty .

    MODULE          reduce using rule 25 (AUXPOSP -> empty .)


state 19

    (23) P -> P AUXPOSP . MODULE ID COLON ST ENDM

    MODULE          shift and go to state 34


state 20

    (26) B -> MAIN . PARL PARR ST

    PARL            shift and go to state 35


state 21

    (1) program -> PACKAGE COLON V MAINP P B . END

    END             shift and go to state 36


state 22

    (17) TIPO -> ARRAY_FLOAT .

    VAR             reduce using rule 17 (TIPO -> ARRAY_FLOAT .)
    MAIN            reduce using rule 17 (TIPO -> ARRAY_FLOAT .)
    MODULE          reduce using rule 17 (TIPO -> ARRAY_FLOAT .)


state 23

    (20) TIPO -> CUBE_INT .

    VAR             reduce using rule 20 (TIPO -> CUBE_INT .)
    MAIN            reduce using rule 20 (TIPO -> CUBE_INT .)
    MODULE          reduce using rule 20 (TIPO -> CUBE_INT .)


state 24

    (22) TIPO -> BOOL .

    VAR             reduce using rule 22 (TIPO -> BOOL .)
    MAIN            reduce using rule 22 (TIPO -> BOOL .)
    MODULE          reduce using rule 22 (TIPO -> BOOL .)


state 25

    (3) V -> V VAR VM AS TIPO .

    VAR             reduce using rule 3 (V -> V VAR VM AS TIPO .)
    MAIN            reduce using rule 3 (V -> V VAR VM AS TIPO .)
    MODULE          reduce using rule 3 (V -> V VAR VM AS TIPO .)


state 26

    (16) TIPO -> ARRAY_INT .

    VAR             reduce using rule 16 (TIPO -> ARRAY_INT .)
    MAIN            reduce using rule 16 (TIPO -> ARRAY_INT .)
    MODULE          reduce using rule 16 (TIPO -> ARRAY_INT .)


state 27

    (14) TIPO -> FLOAT .

    VAR             reduce using rule 14 (TIPO -> FLOAT .)
    MAIN            reduce using rule 14 (TIPO -> FLOAT .)
    MODULE          reduce using rule 14 (TIPO -> FLOAT .)


state 28

    (21) TIPO -> CUBE_FLOAT .

    VAR             reduce using rule 21 (TIPO -> CUBE_FLOAT .)
    MAIN            reduce using rule 21 (TIPO -> CUBE_FLOAT .)
    MODULE          reduce using rule 21 (TIPO -> CUBE_FLOAT .)


state 29

    (15) TIPO -> INT .

    VAR             reduce using rule 15 (TIPO -> INT .)
    MAIN            reduce using rule 15 (TIPO -> INT .)
    MODULE          reduce using rule 15 (TIPO -> INT .)


state 30

    (19) TIPO -> MATRIX_FLOAT .

    VAR             reduce using rule 19 (TIPO -> MATRIX_FLOAT .)
    MAIN            reduce using rule 19 (TIPO -> MATRIX_FLOAT .)
    MODULE          reduce using rule 19 (TIPO -> MATRIX_FLOAT .)


state 31

    (18) TIPO -> MATRIX_INT .

    VAR             reduce using rule 18 (TIPO -> MATRIX_INT .)
    MAIN            reduce using rule 18 (TIPO -> MATRIX_INT .)
    MODULE          reduce using rule 18 (TIPO -> MATRIX_INT .)


state 32

    (6) VM2 -> COMMA ID . VM2
    (8) VM2 -> COMMA ID . SQBL NUMBER SQBR VM2
    (10) VM2 -> COMMA ID . SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> COMMA ID . SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (6) VM2 -> . COMMA ID VM2
    (8) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (13) VM2 -> . empty
    (64) empty -> .

    SQBL            shift and go to state 38
    COMMA           shift and go to state 14
    AS              reduce using rule 64 (empty -> .)

    VM2                            shift and go to state 37
    empty                          shift and go to state 17

state 33

    (7) VM -> ID SQBL NUMBER . SQBR VM2
    (9) VM -> ID SQBL NUMBER . SQBR SQBL NUMBER SQBR VM2
    (11) VM -> ID SQBL NUMBER . SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    SQBR            shift and go to state 39


state 34

    (23) P -> P AUXPOSP MODULE . ID COLON ST ENDM

    ID              shift and go to state 40


state 35

    (26) B -> MAIN PARL . PARR ST

    PARR            shift and go to state 41


state 36

    (1) program -> PACKAGE COLON V MAINP P B END .

    $end            reduce using rule 1 (program -> PACKAGE COLON V MAINP P B END .)


state 37

    (6) VM2 -> COMMA ID VM2 .

    AS              reduce using rule 6 (VM2 -> COMMA ID VM2 .)


state 38

    (8) VM2 -> COMMA ID SQBL . NUMBER SQBR VM2
    (10) VM2 -> COMMA ID SQBL . NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> COMMA ID SQBL . NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    NUMBER          shift and go to state 42


state 39

    (7) VM -> ID SQBL NUMBER SQBR . VM2
    (9) VM -> ID SQBL NUMBER SQBR . SQBL NUMBER SQBR VM2
    (11) VM -> ID SQBL NUMBER SQBR . SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (6) VM2 -> . COMMA ID VM2
    (8) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (13) VM2 -> . empty
    (64) empty -> .

    SQBL            shift and go to state 44
    COMMA           shift and go to state 14
    AS              reduce using rule 64 (empty -> .)

    VM2                            shift and go to state 43
    empty                          shift and go to state 17

state 40

    (23) P -> P AUXPOSP MODULE ID . COLON ST ENDM

    COLON           shift and go to state 45


state 41

    (26) B -> MAIN PARL PARR . ST
    (27) ST -> . S ST
    (28) ST -> . empty
    (29) S -> . ROUT PARL SID PARR
    (30) S -> . RIN PARL IID PARR
    (31) S -> . IF CONDITION COLON ST ENDIF
    (32) S -> . IF CONDITION COLON ST ELSE COLON ST ENDIF
    (33) S -> . FOR ID IN ID COLON ST ENDFOR
    (34) S -> . VMC ASSIGN UPDATE
    (35) S -> . WHILE CONDITION COLON ST ENDW
    (36) S -> . DO COLON ST DWHILE COLON CONDITION ENDDO
    (37) S -> . RGOSUB ID
    (64) empty -> .
    (53) VMC -> . ID
    (54) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR
    (55) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR SQBL CMP SQBR

    ROUT            shift and go to state 54
    RIN             shift and go to state 51
    IF              shift and go to state 56
    FOR             shift and go to state 50
    WHILE           shift and go to state 47
    DO              shift and go to state 48
    RGOSUB          shift and go to state 53
    END             reduce using rule 64 (empty -> .)
    ID              shift and go to state 57

    VMC                            shift and go to state 55
    ST                             shift and go to state 46
    S                              shift and go to state 52
    empty                          shift and go to state 49

state 42

    (8) VM2 -> COMMA ID SQBL NUMBER . SQBR VM2
    (10) VM2 -> COMMA ID SQBL NUMBER . SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> COMMA ID SQBL NUMBER . SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    SQBR            shift and go to state 58


state 43

    (7) VM -> ID SQBL NUMBER SQBR VM2 .

    AS              reduce using rule 7 (VM -> ID SQBL NUMBER SQBR VM2 .)


state 44

    (9) VM -> ID SQBL NUMBER SQBR SQBL . NUMBER SQBR VM2
    (11) VM -> ID SQBL NUMBER SQBR SQBL . NUMBER SQBR SQBR SQBL NUMBER SQBR VM2

    NUMBER          shift and go to state 59


state 45

    (23) P -> P AUXPOSP MODULE ID COLON . ST ENDM
    (27) ST -> . S ST
    (28) ST -> . empty
    (29) S -> . ROUT PARL SID PARR
    (30) S -> . RIN PARL IID PARR
    (31) S -> . IF CONDITION COLON ST ENDIF
    (32) S -> . IF CONDITION COLON ST ELSE COLON ST ENDIF
    (33) S -> . FOR ID IN ID COLON ST ENDFOR
    (34) S -> . VMC ASSIGN UPDATE
    (35) S -> . WHILE CONDITION COLON ST ENDW
    (36) S -> . DO COLON ST DWHILE COLON CONDITION ENDDO
    (37) S -> . RGOSUB ID
    (64) empty -> .
    (53) VMC -> . ID
    (54) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR
    (55) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR SQBL CMP SQBR

    ROUT            shift and go to state 54
    RIN             shift and go to state 51
    IF              shift and go to state 56
    FOR             shift and go to state 50
    WHILE           shift and go to state 47
    DO              shift and go to state 48
    RGOSUB          shift and go to state 53
    ENDM            reduce using rule 64 (empty -> .)
    ID              shift and go to state 57

    VMC                            shift and go to state 55
    S                              shift and go to state 52
    ST                             shift and go to state 60
    empty                          shift and go to state 49

state 46

    (26) B -> MAIN PARL PARR ST .

    END             reduce using rule 26 (B -> MAIN PARL PARR ST .)


state 47

    (35) S -> WHILE . CONDITION COLON ST ENDW
    (46) CONDITION -> . CMP COMPARATOR CMP
    (47) CMP -> . NUMBER
    (48) CMP -> . ID

    NUMBER          shift and go to state 64
    ID              shift and go to state 61

    CMP                            shift and go to state 63
    CONDITION                      shift and go to state 62

state 48

    (36) S -> DO . COLON ST DWHILE COLON CONDITION ENDDO

    COLON           shift and go to state 65


state 49

    (28) ST -> empty .

    END             reduce using rule 28 (ST -> empty .)
    DWHILE          reduce using rule 28 (ST -> empty .)
    ENDIF           reduce using rule 28 (ST -> empty .)
    ELSE            reduce using rule 28 (ST -> empty .)
    ENDFOR          reduce using rule 28 (ST -> empty .)
    ENDM            reduce using rule 28 (ST -> empty .)
    ENDW            reduce using rule 28 (ST -> empty .)


state 50

    (33) S -> FOR . ID IN ID COLON ST ENDFOR

    ID              shift and go to state 66


state 51

    (30) S -> RIN . PARL IID PARR

    PARL            shift and go to state 67


state 52

    (27) ST -> S . ST
    (27) ST -> . S ST
    (28) ST -> . empty
    (29) S -> . ROUT PARL SID PARR
    (30) S -> . RIN PARL IID PARR
    (31) S -> . IF CONDITION COLON ST ENDIF
    (32) S -> . IF CONDITION COLON ST ELSE COLON ST ENDIF
    (33) S -> . FOR ID IN ID COLON ST ENDFOR
    (34) S -> . VMC ASSIGN UPDATE
    (35) S -> . WHILE CONDITION COLON ST ENDW
    (36) S -> . DO COLON ST DWHILE COLON CONDITION ENDDO
    (37) S -> . RGOSUB ID
    (64) empty -> .
    (53) VMC -> . ID
    (54) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR
    (55) VMC -> . ID SQBL CMP SQBR SQBL CMP SQBR SQBL CMP SQBR

    ROUT            shift and go to state 54
    RIN             shift and go to state 51
    IF              shift and go to state 56
    FOR             shift and go to state 50
    WHILE           shift and go to state 47
    DO              shift and go to state 48
    RGOSUB          shift and go to state 53
    END             reduce using rule 64 (empty -> .)
    ENDM            reduce using rule 64 (empty -> .)
    DWHILE          reduce using rule 64 (empty -> .)
    ENDW            reduce using rule 64 (empty -> .)
    ENDIF           reduce using rule 64 (empty -> .)
    ELSE            reduce using rule 64 (empty -> .)
    ENDFOR          reduce using rule 64 (empty -> .)
    ID              shift and go to state 57

    VMC                            shift and go to state 55
    ST                             shift and go to state 68
    S                              shift and go to state 52
    empty                          shift and go to state 49

state 53

    (37) S -> RGOSUB . ID

    ID              shift and go to state 69


state 54

    (29) S -> ROUT . PARL SID PARR

    PARL            shift and go to state 70


state 55

    (34) S -> VMC . ASSIGN UPDATE

    ASSIGN          shift and go to state 71


state 56

    (31) S -> IF . CONDITION COLON ST ENDIF
    (32) S -> IF . CONDITION COLON ST ELSE COLON ST ENDIF
    (46) CONDITION -> . CMP COMPARATOR CMP
    (47) CMP -> . NUMBER
    (48) CMP -> . ID

    NUMBER          shift and go to state 64
    ID              shift and go to state 61

    CMP                            shift and go to state 63
    CONDITION                      shift and go to state 72

state 57

    (53) VMC -> ID .
    (54) VMC -> ID . SQBL CMP SQBR SQBL CMP SQBR
    (55) VMC -> ID . SQBL CMP SQBR SQBL CMP SQBR SQBL CMP SQBR

    NUMBER          reduce using rule 53 (VMC -> ID .)
    ID              reduce using rule 53 (VMC -> ID .)
    ROUT            reduce using rule 53 (VMC -> ID .)
    RIN             reduce using rule 53 (VMC -> ID .)
    IF              reduce using rule 53 (VMC -> ID .)
    FOR             reduce using rule 53 (VMC -> ID .)
    WHILE           reduce using rule 53 (VMC -> ID .)
    DO              reduce using rule 53 (VMC -> ID .)
    RGOSUB          reduce using rule 53 (VMC -> ID .)
    END             reduce using rule 53 (VMC -> ID .)
    ENDM            reduce using rule 53 (VMC -> ID .)
    DWHILE          reduce using rule 53 (VMC -> ID .)
    ENDW            reduce using rule 53 (VMC -> ID .)
    ENDIF           reduce using rule 53 (VMC -> ID .)
    ELSE            reduce using rule 53 (VMC -> ID .)
    ENDFOR          reduce using rule 53 (VMC -> ID .)
    ASSIGN          reduce using rule 53 (VMC -> ID .)
    PLUS            reduce using rule 53 (VMC -> ID .)
    PARR            reduce using rule 53 (VMC -> ID .)
    COMMA           reduce using rule 53 (VMC -> ID .)
    SQBL            shift and go to state 73


state 58

    (8) VM2 -> COMMA ID SQBL NUMBER SQBR . VM2
    (10) VM2 -> COMMA ID SQBL NUMBER SQBR . SQBL NUMBER SQBR VM2
    (12) VM2 -> COMMA ID SQBL NUMBER SQBR . SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (6) VM2 -> . COMMA ID VM2
    (8) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER SQBR SQBL NUMBER SQBR SQBR SQBL NUMBER SQBR VM2
    (13) VM2 -> . empty
    (64) empty -> .

    SQBL            shift and go to state 75
    COMMA           shift and go to state 14
    AS              reduce using rule 64 (empty -> .)

    VM2                            shift and go to state 74
    empty                          shift and go to state 17

state 59

    (9) VM -> ID SQBL NUMBER SQBR SQBL NUMBER . SQBR VM2
    (11) VM -> ID SQBL NUMBER SQBR SQBL NUMBER . SQBR SQBR SQBL NUMBER SQBR VM2

    SQBR            shift and go to state 76


state 60

    (23) P -> P AUXPOSP MODULE ID COLON ST . ENDM

    ENDM            shift and go to state 77


state 61

    (48) CMP -> ID .
